# minban-frontend

./: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json  tailwind.config.js
assets/: tailwind.css
src/: backend_async.rs  main.rs  request.rs  response.rs
src/api/: api_requests_async.rs  auth_api_async.rs  card_api_async.rs  mod.rs  routes.rs  state_api_async.rs  tag_api_async.rs
src/components/: card.rs  card_details.rs  column.rs  editable_tag.rs  header.rs  loading.rs  login.rs  mod.rs  tag.rs
src/components/icons/: icons.rs  mod.rs
src/mods/: mod.rs  mods.rs  request.rs  response.rs
src/utils/: login_state.rs  mod.rs  states.rs
