[package]
name = "minban-frontend"
version = "0.1.0"
authors = ["Snekussaurier <valentin.schiffl@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6", features = ["web", "router"] }
futures = "0.3.31"

# Debug
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.215"
wasm-cookies = "0.2.1"
web-sys = { version = "0.3.72", features = ["HtmlDocument"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
